test/libsolidity/syntaxTests/scoping/double_variable_declaration_disjoint_scope_activation.sol
contract test {
    function f() pure public {
        { uint x; }
        uint x;
    }
}
// ----
// DeclarationError: Identifier already declared.
